# agile_manifesto

./: README.md  pyproject.toml
agile_manifesto/: app.py  config.py  model.py  models.py  registrar.py
agile_manifesto/setup/: default_data.py  initializer.py
agile_manifesto/utils/: db.py  path.py
tests/: test_agile_manifesto.py
