[tool.poetry]
name = "agile_manifesto"
version = "0.1.0"
description = "Agile Manifesto's Custom REST API"
authors = ["Jonel Getigan <jonel.getigan@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
SQLAlchemy = "^1.3.18"
Flask = "^1.1.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
mypy = "^0.782"
flake8 = "^3.8.3"
black = "^19.10b0"
bandit = "^1.6.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
